--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple example of ApiRest",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "start": "SET NODE_ENV=dev && node index.js",
+    "test": "mocha --timeout 10000"
   },
   "author": "Alfonso Rodriguez",
   "license": "ISC",
@@ -12,5 +13,10 @@
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "method-override": "^2.3.7"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.2.0"
   }
 }
